--- a/Sigmund.EnhancedDictionaryEditor/EnhancedDictionaryEditor.nuspec
+++ b/Sigmund.EnhancedDictionaryEditor/EnhancedDictionaryEditor.nuspec
@@ -8,7 +8,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Dictionary key editor</description>
     <tags>Dictionary, Editor, Key</tags>
-   0 <dependencies>
+    <dependencies>
       <dependency id="UmbracoCms.Core" version="7.7.6" />
     </dependencies>
   </metadata>
