--- a/Sigmund.EnhancedDictionaryEditor/Sigmund.EnhancedDictionaryEditor.csproj
+++ b/Sigmund.EnhancedDictionaryEditor/Sigmund.EnhancedDictionaryEditor.csproj
@@ -1,4 +1,5 @@
 ﻿<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\UmbracoCms.7.12.3\build\UmbracoCms.props" Condition="Exists('..\packages\UmbracoCms.7.12.3\build\UmbracoCms.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -240,6 +241,10 @@
     <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\backoffice\EnhancedDictionaryEditorSectionTree\edit.html" />
     <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\backoffice\EnhancedDictionaryEditorSectionTree\enhancedDictionaryEditorDeleteController.js" />
     <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\backoffice\EnhancedDictionaryEditorSectionTree\enhancedDictionaryEditorEditController.js" />
+    <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\backoffice\EnhancedDictionaryEditorSectionTree\enhancedDictionaryEditorexportController.js" />
+    <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\backoffice\EnhancedDictionaryEditorSectionTree\enhancedDictionaryEditorImportController.js" />
+    <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\backoffice\EnhancedDictionaryEditorSectionTree\export.html" />
+    <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\backoffice\EnhancedDictionaryEditorSectionTree\import.html" />
     <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\generalViewTabController.js" />
     <Content Include="app_plugins\SigmundEnhancedDictionaryEditor\general_view_tab.html" />
     <Content Include="EnhancedDictionaryEditor.nuspec">
@@ -264,13 +269,18 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackOffice\SigmundEnhancedDictionaryEditor\DictionnaryKeyTreeNodeRepository.cs" />
     <Compile Include="BackOffice\SigmundEnhancedDictionaryEditor\EnhancedDictionaryEditorController.cs" />
-    <Compile Include="Model\CreateDictionaryItem.cs" />
     <Compile Include="Model\ItemCulture.cs" />
     <Compile Include="Model\ItemInfos.cs" />
-    <Compile Include="Model\SaveData.cs" />
+    <Compile Include="Model\MenuAction\CreateDictionaryItem.cs" />
+    <Compile Include="Model\MenuAction\ExportDictionaryItems.cs" />
+    <Compile Include="Model\MenuAction\ImportDictionaryItems.cs" />
+    <Compile Include="Model\Serialization\SerializableDictionaryItem.cs" />
+    <Compile Include="Model\Serialization\SerializableDictionaryItemsArray.cs" />
+    <Compile Include="Model\Serialization\SerializableItemInfosTranslation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\DictionnaryKeyTreeNodeRepository.cs" />
+    <Compile Include="Repository\ItemInfosRepository.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -303,8 +313,11 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('..\packages\UmbracoCms.7.12.3\build\UmbracoCms.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\UmbracoCms.7.12.3\build\UmbracoCms.props'))" />
+    <Error Condition="!Exists('..\packages\UmbracoCms.7.12.3\build\UmbracoCms.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\UmbracoCms.7.12.3\build\UmbracoCms.targets'))" />
   </Target>
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
+  <Import Project="..\packages\UmbracoCms.7.12.3\build\UmbracoCms.targets" Condition="Exists('..\packages\UmbracoCms.7.12.3\build\UmbracoCms.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
