--- a/Sigmund.EnhancedDictionaryEditor/Sigmund.EnhancedDictionaryEditor.csproj
+++ b/Sigmund.EnhancedDictionaryEditor/Sigmund.EnhancedDictionaryEditor.csproj
@@ -280,6 +280,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\DictionnaryKeyTreeNodeRepository.cs" />
     <Compile Include="Repository\ItemInfosRepository.cs" />
+    <Compile Include="Translation\DictionaryValueTranslatorProvider.cs" />
+    <Compile Include="Translation\ITranslator.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
